# nft-passkey-dapp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  railway.json  railway.toml
src/: blockchain.rs  gotas.rs  main.rs
static/: index.html
static/css/: style.css
static/js/: app.js
