[package]
name = "nft-passkey-dapp"
version = "0.1.0"
edition = "2021"
description = "NFT DApp with PassKey Authentication"
authors = ["Seu Nome <catitodev@gmail.com>"]
license = "MIT"
repository = "https://github.com/catitodev/nft-passkey-dapp"

[dependencies]
tokio = { version = "1.14.1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webauthn-rs = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
sha2 = "0.10"
hex = "0.4.3"
base64 = "0.21"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
# Dependências para requisições HTTP
reqwest = { version = "0.11", features = ["json"] }